<resources>
    <string name="app_name">BluetoothAmplifierClient</string>
    <string name="action_settings">Settings</string>

    <!--Buffer Size-->
    <string name="key_bufferSize">bufferSize</string><!--key to use to save in intent-->
    <!--Audio Track-->
    <string name="key_audioTrack">audioTrack</string><!--key to use to save in intent-->
    <!--Address-->
    <string name="key_serverAddress">serverAddress</string><!--key to use to save in SharedPreference and intent-->

    <!--Signed-->
    <string name="key_signed_index">signed_index</string><!-- key to use on SharedPreference, store int-->
    <string name="signedArrayFirstElement">signed</string><!-- used to set default text on button-->
    <string-array name="signedArray">
        <item>@string/signedArrayFirstElement</item>
        <item>unsigned</item>
    </string-array>

    <!--Bits Per Sample-->
    <string name="key_bitsPerSample_index">bitsPerSample_index</string>
    <string name="bitsPerSampleArrayFirstElement">8</string>
    <string-array name="bitsPerSampleArray">
        <item>@string/bitsPerSampleArrayFirstElement</item>
        <item>16</item>
    </string-array>

    <!--Channel Type-->
    <string name="key_channelType_index">channelType_index</string>
    <string name="channelTypeArrayFirstElement">mono</string>
    <string-array name="channelTypeArray">
        <item>@string/channelTypeArrayFirstElement</item>
        <item>stereo</item>
    </string-array>

    <!--Bytes Per Frame-->
    <!-- bytes Per Frame is calculated by bitsPerSample * channels -->

    <!--Endian-->
    <string name="key_endian_index">endian_index</string>
    <string name="endianArrayFirstElement">little-endian</string>
    <string-array name="endianArray">
        <item>@string/endianArrayFirstElement</item>
        <item>big-endian</item>
    </string-array>

    <!--Sample Rate-->
    <string name="key_sampleRate_index">sampleRate_index</string>
    <string name="sampleRateArrayFirstElement">44100</string>
    <string-array name="sampleRateArray">
        <item>@string/sampleRateArrayFirstElement</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
